--- a/quiz.css
+++ b/quiz.css
@@ -1,116 +1,105 @@
-
-
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Roboto', sans-serif;
-    font-size: 1.25rem;
+{
+  border: 1px dotted black;
 }
 
-body {
-    width: 100vw;
-    height: 100vh;
-    background: linear-gradient(red,pink,blue);
-    color: #fff;
+p.question {
+  font-family: Arial, sans-serif;
+	  font-size:20px;
+  color: #2E2E2E;
+  margin-bottom:0px;
 }
 
-main {
-    width: 100%;
-    height: 100%;
-    padding: 1rem; 
+h2.quizHeader {
+  font-family: Arial, sans-serif;
+  font-weight:normal;
+  font-size:25px;
+  line-height: 27px;
+  margin: 24px 0 12px 0;
+  padding: 0 0 4px 0;
+  border-bottom: 1px solid #a2a2a2;
 }
 
-section {
-    width: 100%;
-    margin: 0 auto;
-    padding: 1rem;
-    margin-bottom: 0.625rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+h2.quizScore{
+  font-family: Arial, sans-serif;
+  font-size:25px;
 }
 
-h1 {
-    text-align: center;
-    font-size: 1.75rem;
-    margin: 0.625rem;
+div.quizAnswers{
+  font-family: Arial, sans-serif;
+  font-size:16px;
+  color: #424242;
+  padding: 4px 0 4px 0;
 }
 
-.centro {
-    text-align: center;
+label {
+  font-family: Arial, sans-serif;
+  font-size:14px;
+  color: #424242;
+  vertical-align:top;
 }
 
-.questao {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+input.answer[type="radio"] {
+  margin-bottom: 10px;
 }
 
-#numQuestao {
-    display: block;
-    background: #00b0ff;
-    padding: 4px 10px 2px 10px;
-    border-radius: 50%;
+input.quizSubmit[type="submit"] {
+  -webkit-background-clip: border-box;
+  -webkit-background-origin: padding-box;
+  -webkit-background-size: auto;
+  -webkit-transition-delay: 0s, 0s;
+  -webkit-transition-duration: 0.2s, 0.2s;
+  -webkit-transition-property: color, background-color;
+  -webkit-transition-timing-function: ease, ease;
+  box-shadow: rgba(0, 0, 0, 0.498039) 0px 0px 5px 0px;
+  color: #ffffff;
+  background-color: #c30b0a;
+  margin: 0;
+  border: 0;
+  outline: 0;
+  text-transform:uppercase;
+  height:35px;
+  width:85px;
+  border: 1px solid #5E5E5E;
+  border-radius:5px;
+  
+ }
+
+input.quizSubmit[type="submit"]:hover {
+  color: #ffffff;
+  background: #680f11;
+  text-decoration: none;
 }
 
-#pergunta {
-    margin-left: 1rem;
+table {
+  background-color: #F2F2F2;
+	  border:1px solid #BDBDBD;
+  border-radius:5px;
+  padding:10px;
+  padding-left:25px;
+  box-shadow: rgba(0, 0, 0, 0.498039) 0px 0px 1px 0px;
 }
 
-
-.questoes {
-    padding: 1.5rem;
-    border: 1px solid #ececec;
-    border-radius: 5px;
-    margin-bottom: 2rem;
+th {
+  
 }
 
-.questoes ol li {
-    display: block;
-    margin: 1rem;
-    padding: 1rem;
-    border-radius: 8px;
+tr {
+  
 }
 
-.questoes ol li:hover {
-    background: #aeff00;
-    cursor: pointer;
+td {
+
 }
 
-.bloqueado {
-    display: none;
+.submitter {
+	  width:85px;
 }
 
-.bloqueado li:hover {
-    display: none;
-}
-
-#instrucoes {
-    background:none;
-    color: #191919;
-    padding: 0.625rem;
-    border-radius: 8px;
-
-    display: flex;
-    justify-content: center;
-    margin-bottom: 1rem;
-    animation: piscar .75s infinite alternate;
-}
-
-#aviso {
-    color: #000000;
+.hide {
+	  display:none;
 }
 
 
-@keyframes aparecer {
-    0% {
-        opacity: 0
-    }
-    100% {
-        opacity: 1
-    }
-}
+/*SFS light red = #c30b0a;
+SFS dark red = #9f2026; */
+
